# grounding_sam2_app

./: .gitignore  CLAUDE.md  README.md  design.md  main.py  pyproject.toml
output_videos/: README.md
sample_videos/: README.md
