[project]
name = "grounding-sam2-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "segment-anything>=1.0",
    "streamlit>=1.49.0",
    "supervision>=0.26.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
    "ultralytics>=8.3.189",
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
]
